--- a/layouts/basic_split_test.yaml
+++ b/layouts/basic_split_test.yaml
@@ -167,6 +167,14 @@ devices:
         r2c0, r2c1, r2c2, r2c3, r2c4, r2c5,
         r3c0, r3c1, r3c2, r3c3, r3c4, r3c5,
       ]
+      debounce:
+        debounce_time_press: 3
+        debounce_time_release: 5
+        trigger_time_press: 0
+        trigger_time_release: 0
+        parasitic_discharge_delay_idle: 1.0
+        parasitic_discharge_delay_debouncing: 1.0
+
 
   "orange gamma split - right":
     id: 15
