--- a/xmega/Makefile
+++ b/xmega/Makefile
@@ -30,6 +30,12 @@ VPATH += $(XMEGA_PATH)
 INC_PATHS += \
 	-I$(KEYPLUS_PATH)
 
+# USB_VID = 6666
+# USB_PID = 1111
+
+USB_VID = 1209
+USB_PID = BB00
+
 #######################################################################
 #                        board config options                         #
 #######################################################################
