--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ matrix:
       script:
         - 'source env/enter_env.sh'
         - 'cd xmega'
-        - 'make MCU=atxmega32a4u BOARD=keyplus_mini'
-        - 'make MCU=atxmega128a4u BOARD=alpha_split'
-        - 'make MCU=atxmega64c3 BOARD=plain'
+        - 'make MCU=atxmega32a4u ID=0 BOARD=keyplus_mini'
+        - 'make MCU=atxmega128a4u ID=14 BOARD=alpha_split'
+        - 'make MCU=atxmega64c3 LAYOUT_FILE=../layouts/spectre.yaml BOARD=plain'
       # after_success:
       #   - echo "After_Success"
 
