--- a/layouts/matrix_row_tester.yaml
+++ b/layouts/matrix_row_tester.yaml
@@ -9,7 +9,7 @@ version: 0
 report_mode: auto_nkro # options: auto_nkro, 6kro, nkro
 
 devices:
-  "Matrix Tester - max rows":
+  "Matrix Tester - 10x12":
     id: 0
     scan_mode:
       mode: col_row
