--- a/atmega32u4/Makefile
+++ b/atmega32u4/Makefile
@@ -1,31 +1,18 @@
 # Copyright 2017 jem@seethis.link
 # Licensed under the MIT license (http://opensource.org/licenses/MIT)
 
-# TODO: build system needs cleanup for building for different hardware
+#######################################################################
+#                        global build options                         #
+#######################################################################
 
+# TODO: build system needs cleanup for building for different hardware
 MCU = atmega32u4
 ARCH = AVR
 BOOTLOADER = atmel_dfu
 # BOOTLOADER = lufa_dfu
 
-# Target file name (without extension).
-TARGET = atmega32u4_keyboard
-
-# Output format. (can be srec, ihex, binary)
-FORMAT = ihex
-
-# Object files directory
-OBJ_DIR = obj
-
-BASE_PATH=../src
-
-VPATH += $(BASE_PATH)
-
-INC_PATHS += \
-	-I$(BASE_PATH)
-
-VID = 6666
-PID = 2222
+USB_VID = 6666
+USB_PID = 2222
 F_CPU = 16000000
 
 USE_USB := 0
@@ -34,9 +21,47 @@ USE_NRF24 := 0
 USE_I2C := 1
 USE_HARDWARE_SPECIFIC_SCAN := 1
 
-include $(BASE_PATH)/core/core.mk
-include $(BASE_PATH)/usb/usb.mk
-include $(BASE_PATH)/key_handlers/key_handlers.mk
+# Target file name (without extension).
+TARGET_BASE_NAME = keyplus_32u4
+
+# Output format. (can be srec, ihex, binary)
+FORMAT = ihex
+
+# Object files directory
+OBJ_DIR = obj
+
+KEYPLUS_PATH := ../src
+VPATH += $(KEYPLUS_PATH)
+INC_PATHS += -I$(KEYPLUS_PATH)
+
+#######################################################################
+#                        board config options                         #
+#######################################################################
+
+include avr-makefile/boards.mk
+
+#######################################################################
+#                        common build settings                        #
+#######################################################################
+
+include $(KEYPLUS_PATH)/core/core.mk
+include $(KEYPLUS_PATH)/usb/usb.mk
+include $(KEYPLUS_PATH)/key_handlers/key_handlers.mk
+
+#######################################################################
+#                         programming options                         #
+#######################################################################
+
+AVRDUDE_PROGRAMMER = avrispmkII
+AVRDUDE_CMD=avrdude -p $(AVRDUDE_PART) -c $(AVRDUDE_PROGRAMMER)
+
+KEYPLUS_CLI = python3 ../host-software/keyplus-cli
+
+#######################################################################
+#                          compiler settings                          #
+#######################################################################
+
+CFLAGS += $(INC_PATHS)
 
 # List C source files here.
 C_SRC += \
@@ -44,15 +69,6 @@ C_SRC += \
 	usb_keyboard.c \
 	fuses.c \
 	timer.c \
-
-# ifeq ($(USE_I2C), 1)
-# 	C_SRC += wired.c
-# endif
-
-# # TODO: enable/disable nrf24 and i2c at run time using flash settings
-# ifeq ($(USE_NRF24), 1)
-# 	C_SRC += nrf24.c
-# endif
 
 # List Assembler source files here.
 # NOTE: Use *.S for user written asm files. *.s is used for compiler generated
@@ -71,7 +87,7 @@ FUSE_SECTION_START=0x08F0020
 CSTANDARD = -std=gnu99
 
 AVRDUDE_PART = m32u4
-MCU_STRING = "ATmega32u4"
+MCU_STRING = "ATmega32U4"
 # LD_SCRIPT = avrxmega2.xn
 
 ATMEL_VID=0x03EB
@@ -82,7 +98,9 @@ FLIP_USB_DFU_32u4=0x2FF
 ifeq ($(BOOTLOADER), atmel_dfu)
   BOOT_SECTION_START = 0x007000
   BOOTLOADER_SIZE = 0x1000
-  C_SRC += atmel_dfu/atmel_bootloader.c
+  BOOTLOADER_PATH = bootloaders
+  C_SRC += $(BOOTLOADER_PATH)/atmel_dfu/atmel_bootloader.c
+  CFLAGS += -I$(BOOTLOADER_PATH)
   CFLAGS += -DBOOTLOADER_VID=$(ATMEL_VID)
   CFLAGS += -DBOOTLOADER_PID=$(FLIP_USB_DFU_32u4)
 else ifeq ($(BOOTLOADER), lufa_dfu)
@@ -111,18 +129,6 @@ CDEFS += -DSETTINGS_ADDR=$(SETTING_ADDR)
 CDEFS += -DLAYOUT_ADDR=$(LAYOUT_ADDR)
 CDEFS += -DLAYOUT_SIZE=$(LAYOUT_SIZE)
 
-# Place -D or -U options here for C sources
-CDEFS += -DCLOCK_SPEED_SLOW=$(CLOCK_SPEED_SLOW)UL
-CDEFS += -DF_CPU=$(F_CPU)UL
-CDEFS += -DF_USB=$(F_USB)UL
-CDEFS += -DBOARD=BOARD_$(BOARD) -DARCH=ARCH_$(ARCH)
-CDEFS += $(USB_OPTS)
-CDEFS += -D'HW_VERSION=$(HW_VERSION)'
-CDEFS += -D'FW_VERSION=$(FW_VERSION)'
-CDEFS += -DUSB_PID=$(PID)
-CDEFS += -DUSB_VID=$(VID)
-CDEFS += $(INC_PATHS)
-
 CFLAGS += -Wno-error=unused-variable
 CFLAGS += -Wno-error=unused-function
 CFLAGS += -Wno-error=unused-but-set-variable
@@ -131,14 +137,11 @@ CFLAGS += -Wno-error=unused-but-set-variable
 CFLAGS += -fno-jump-tables
 
 # Place -D or -U options here for ASM sources
-ADEFS  = -DF_CPU=$(F_CPU)
-ADEFS += -DF_USB=$(F_USB)UL
-ADEFS += -DBOARD=BOARD_$(BOARD)
 ADEFS += $(USB_OPTS)
 
-AVRDUDE = avrdude
-AVRDUDE_PROGRAMMER = usbasp
-AVRDUDE_CMD = $(AVRDUDE) -c $(AVRDUDE_PROGRAMMER) -p $(AVRDUDE_PART)
+#######################################################################
+#                              recepies                               #
+#######################################################################
 
 all: hex lock fuse
 
@@ -175,13 +178,13 @@ program-fuses:
 		-U hfuse:w:$(HFUSE):m \
 		-U efuse:w:$(EFUSE):m \
 
-ATMEL_DFU = atmel_dfu/ATMega32U4-usbdevice_dfu-1_0_0.hex
-program-atmel-dfu:
+ATMEL_DFU = bootloaders/atmel_dfu/ATMega32U4-usbdevice_dfu-1_0_0.hex
+program-atmel-dfu-bootloader:
 	$(AVRDUDE_CMD) -U flash:w:$(ATMEL_DFU):i
 
 program-dfu:
-	dfu-programmer $(MCU) erase
-	dfu-programmer $(MCU) flash $(TARGET).hex
+	dfu-programmer $(MCU) erase --force
+	dfu-programmer $(MCU) flash $(TARGET_HEX)
 	dfu-programmer $(MCU) start
 
 # lock options, see fuses.c (lock bit values written to $(TARGET).lock)
@@ -198,7 +201,8 @@ LOCKBITS = NO_LOCK
 program-lock:
 	$(AVRDUDE_CMD) -U lock:w:$(LOCKBITS):m
 
--include ../xmega/avr.mk
+include avr-makefile/avr.mk
+include avr-makefile/avr-program.mk
 
 # Listing of phony targets.
 .PHONY : all program bootload_only bootload program-fuses program-boot \
