fix parser error messages detecting num keys

--- a/layouts/1key.yaml
+++ b/layouts/1key.yaml
@@ -8,7 +8,7 @@ devices:
     id: 0
     scan_mode:
       mode: pin_gnd # options: col_row, pins, none
-      pins: [B0]
+      pins: [D1]
     layout: 1key
 
 layouts:
