make `keycodes` interpret modkeys correctly

--- a/layouts/basic_split_test.yaml
+++ b/layouts/basic_split_test.yaml
@@ -311,22 +311,29 @@ keycodes:
     hold_key: sticky_lshift
     # options:
 
+  # space_fn:
+  #   keycode: hold
+  #   delay: 200
+  #   tap_key: space
+  #   hold_key: sticky_l2
+  #   # options:
+
 layouts:
   split_layout:
     default_layer: 0
     layers: [
       [ # layer 0 (colemak)
         [ # left hand
-          tab , q   , w   , f   , p   , g   ,
-          SFTENT , a   , r   , s   , t   , d   ,
-          lalt, z   , x   , c   , v   , b   ,
-          esc , L6  , lctl, spc , L5  ,
+          tab    , q      , w    , f    , p   , g   ,
+          SFTENT , a      , r    , s    , t   , d   ,
+          lalt   , z      , x    , c    , v   , b   ,
+          esc    , L6     , lctl , spc  , L5  ,
         ],
         [ # right hand
-          j   , l   , u   , y   , ";" , "-" ,
-          h   , n   , e   , i   , o   , "'" ,
-          k   , m   , "," , "." , "/" , "`" ,
-          bspc, sticky_lshift, sticky_L4, lgui, esc ,
+          j      , l      , u    , y    , ";" , "-" ,
+          h      , n      , e    , i    , o   , "'" ,
+          k      , m      , ","  , "."  , "/"  , "`" ,
+          bspc   , s_lsft , s_L4 , lgui , esc ,
         ],
       ],
       [ # layer 1 (dvorak)
