add row_col support for devices using BASIC_SCAN
Devices without hardware support for pull-down resistors, can't
use the FAST_ROW_COL internal scan method, instead emulate this
behaviour by making the host-software swap the ROW and COL pins
in its matrix map.

--- a/atmega32u4/Makefile
+++ b/atmega32u4/Makefile
@@ -221,7 +221,7 @@ $(MERGED_HEX): $(TARGET_HEX) $(LAYOUT_FILE) $(RF_FILE)
 		-M $(SETTING_ADDR) $(LAYOUT_ADDR) $(LAYOUT_SIZE) \
 		-o "$(MERGED_HEX)" \
 		-F chip_name="$(MCU_STRING)" \
-		-F scan_method=fast_row_col \
+		-F scan_method=basic_scan \
 		-F max_rows=$(SCANNER_MAX_ROWS) \
 
 ATMEL_DFU = bootloaders/atmel_dfu/ATMega32U4-usbdevice_dfu-1_0_0.hex
